// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design Systems/Atoms/TextOverflow Text Overflow One Line 1`] = `
<p
  className="css-uv1o0y-Box-TextOverflow eyzgrpe0"
  style={
    Object {
      "WebkitBoxOrient": "vertical",
      "WebkitLineClamp": "1",
      "display": "block",
      "lineClamp": "1",
      "whiteSpace": "nowrap",
    }
  }
>
  <div
    style={
      Object {
        "width": 150,
      }
    }
  >
    <p
      className="css-uv1o0y-Box-TextOverflow eyzgrpe0"
      style={
        Object {
          "WebkitBoxOrient": "vertical",
          "WebkitLineClamp": "1",
          "display": "block",
          "lineClamp": "1",
          "whiteSpace": "nowrap",
        }
      }
    >
      I am a text paragraph tha is too long and goes with ellipsis!
    </p>
  </div>
</p>
`;

exports[`Storyshots Design Systems/Atoms/TextOverflow Text Overflow Two Line 1`] = `
<p
  className="css-uv1o0y-Box-TextOverflow eyzgrpe0"
  style={
    Object {
      "WebkitBoxOrient": "vertical",
      "WebkitLineClamp": "1",
      "display": "block",
      "lineClamp": "1",
      "whiteSpace": "nowrap",
    }
  }
>
  <div
    style={
      Object {
        "width": 100,
      }
    }
  >
    <p
      className="css-uv1o0y-Box-TextOverflow eyzgrpe0"
      style={
        Object {
          "WebkitBoxOrient": "vertical",
          "WebkitLineClamp": "2",
          "display": "-webkit-box",
          "lineClamp": "2",
          "whiteSpace": "normal",
        }
      }
    >
      I am a text paragraph tha is too long and goes with ellipsis!
    </p>
  </div>
</p>
`;
